Don't set a fixed width on IE8 and below

--- a/wp-content/themes/grunwell2012/css/ie8.scss
+++ b/wp-content/themes/grunwell2012/css/ie8.scss
@@ -7,8 +7,6 @@
  *
  */
 
-#wrapper{width:960px; min-width:960px;}
-
 // min-width:500px
 @import "500";
 
